# skillrun

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  RELEASE_NOTES.md  SECURITY.md  dist-workspace.toml  release-plz.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
docs/: README.md  adapter-protocol.md  agent-context-skills.md  branch-protection.md  business-examples.md  mvp.md  native-distribution.md  positioning.md  release-checklist.md  release-policy.md  release.md  ssot.md  testing.md  trust-model.md  v0.4-portable-consumer-checks.md  v0.4.1-wecom-team-notice.md  v0.4.2-official-capsules.md  v0.4.3-ci-stabilization.md  v0.5-adapter-protocol.md  v0.5.1-contract-stabilization.md  v0.5.10-consumer-contract-hardening.md  v0.5.11-runs-inspect.md  v0.5.12-capsule-import.md  v0.5.13-import-router-contract.md  v0.5.14-desktop-host-readiness.md  v0.5.15-desktop-contract-freeze.md  v0.5.2-consumer-json-surface.md  v0.5.3-capsule-registry-switchboard.md  v0.5.4-core-stabilization-audit.md  v0.5.5-core-contract-hardening.md  v0.5.5-post-release-review.md  v0.5.5-release-gate-review.md  v0.5.6-ci-diagnostics-review.md  v0.5.6-headless-consumer-contract.md  v0.5.6-mount-plan-contract-review.md  v0.5.6-release-gate-review.md  v0.5.6-release-polish-plan.md  v0.5.6-run-history-contract-review.md  v0.5.7-public-surface-plan.md  v0.5.8-router-mvp.md  (+4 more)
src/: capsule_import.rs  check.rs  cli.rs  config.rs  consumer.rs  doctor.rs  errors.rs  hashing.rs  host.rs  init.rs  inspect.rs  main.rs  manifest.rs  manifest_access.rs  mcp.rs  mount_plan.rs  pack.rs  permissions.rs  registry.rs  (+6 more)
(+353 files in other folders)
