[package]
name = "skillrun"
version = "0.2.0"
edition = "2021"
description = "Rust CLI for building manifest-driven Agent skill capsules from one SOP and one action."
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
tar = "0.4"

[[bin]]
name = "skillrun"
path = "src/main.rs"
