[package]
name = "skillrun"
version = "0.5.16"
edition = "2021"
description = "Rust CLI for building manifest-driven Agent skill capsules from one SOP and one action."
license = "Apache-2.0"
repository = "https://github.com/iiwish/skillrun"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"

[[bin]]
name = "skillrun"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true
